--- a/_posts/postgraduate/Vue/2017-12-28-Vue从入门到放弃-Vue环境搭建.md
+++ b/_posts/postgraduate/Vue/2017-12-28-Vue从入门到放弃-Vue环境搭建.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "Vue环境搭建"
+title: "Vue从入门到放弃-Vue环境搭建"
 date: 2017-12-28 17:26:15 +0800 
-categories: Vue从入门到放弃
+categories: Vue
 tag: Vue
 ---
 * content
