--- a/_posts/postgraduate/Vue/2017-12-28-Vue从入门到放弃-Vue环境搭建.md
+++ b/_posts/postgraduate/Vue/2017-12-28-Vue从入门到放弃-Vue环境搭建.md
@@ -91,3 +91,6 @@ $ git clone https://github.com/zkwx/JZKFXT_APP.git
 npm install
 npm run dev
 ```
+
+git config --global user.name "YourName"
+git config --global user.email "YourName@gmail.com"
