--- a/_posts/postgraduate/Vue/2017-12-28-Vue从入门到放弃-Vue环境搭建.md
+++ b/_posts/postgraduate/Vue/2017-12-28-Vue从入门到放弃-Vue环境搭建.md
@@ -21,24 +21,19 @@ tag: Vue
 $ npm -v
 5.6.0
 ```
-
 顺便说一下，如果你安装的是旧版本的 npm，可以很容易得通过 npm 命令来升级，命令如下：
 ```
 $ npm update -g
 ```
-
 升级nodejs的代码也只需要两行代码(stable是稳定版，也可以替换成latest最新版)
-
 ```
 $ npm install -g n
 $ n stable
 ```
-
 如果实在更新不了，直接重新安装覆盖吧，在覆盖的时候要检查之前安装 node 的路径：
 ```
 $ where node
 ```
-
 另外，其他常用命令如下，也可以用npm help查看所有命令。
 * `npm install` 在项目文件夹下执行，可安装package.json中引用的包
 * `npm update` <package> 可以把当前目录下node_modules子目录里边的对应模块更新至最新版本。
@@ -46,23 +41,18 @@ $ where node
 * `npm run build` 构建程序到dist文件夹，用来发布
 * `npm config get userconfig` 查看用户配置文件路径。默认为：`C:\Users\Administrator\.npmrc`
 * `npm config get globalconfig` 查看全局配置文件路径
-
 ### 2.配置NodeJs全局变量 ###
-
 npm默认的包下载路径是：`C:\Users\Administrator\AppData\Roaming\npm\node_modules`
 C盘肯定不能来放这些东西，所以需要修改配置文件的包存放路径为适合的地址，我放在了nodejs的根目录下。
 ```
 $ npm config set prefix "D:\Program Files\nodejs"
 ```
-
 另外，如果直接用npm安装，如果没有科学上网。。。将会下载的很慢，并出现很多不可预测的错误。
 所以我们需要设置npm的国内镜像，如[`npm淘宝镜像`](http://npm.taobao.org/)
 ```
 $ npm config set registry https://registry.npm.taobao.org
 ```
-
 至此，环境搭建完成。
-
 ## 初始化vue项目或从GitHub上克隆 ##
 ### 1.命令行工具vue-cli初始化Vue ###
 Vue 提供一个官方命令行工具vue-cli，可用于快速搭建大型单页应用。该工具为现代化的前端开发工作流提供了开箱即用的构建配置。只需几分钟即可创建并启动一个带热重载、保存时静态检查以及可用于生产环境的构建配置的项目：
@@ -76,12 +66,9 @@ $ cd my-project
 $ npm install
 $ npm run dev
 ```
-
 这样，一个简单的Vue程序就初始化完成，现在可以放弃了。
-
 ### 2.从GitHub上克隆NodeJs程序 ###
 下载[`Git`](https://git-scm.com/)。
-
 进入准备存放项目的文件夹后，克隆项目
 ```
 $ git clone https://github.com/zkwx/JZKFXT_APP.git
@@ -92,5 +79,8 @@ npm install
 npm run dev
 ```
 
-git config --global user.name "YourName"
-git config --global user.email "YourName@gmail.com"
+另外，git全局配置
+git config --global user.name "qzh1991"
+git config --global user.email "qzh1991@qq.com"
+记住密码
+git config --global credential.helper store
